# ai-code-judge

./: .gitignore  LICENSE  README.md  deploy.sh  pyproject.toml
.github/workflows/: ci.yml
docs/: DESIGN.md
examples/rate-limiter/: cases.json  problem.json
examples/rate-limiter/solutions/: model_a.py  model_b.py
examples/sql-injection-fix/: cases.json  problem.json
examples/sql-injection-fix/solutions/: model_a.py  model_b.py
examples/two-sum/: cases.json  problem.json
examples/two-sum/solutions/: model_b.py
judge/: __init__.py  cli.py  evaluator.py  heuristics.py
judge/rubrics/: rubric.py
judge/runners/: python_runner.py
tests/: test_judge.py
